crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__ternary.snap
---
source: src/lib.rs
expression: "lex(\"a b c ?\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Question
  len: 1
