crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__underscore_prop_name.snap
---
source: src/lib.rs
expression: "tokenize(\"x._Combed\").collect::<Vec<_>>()"
---
- kind: Ident
  len: 1
- kind: Dot
  len: 1
- kind: Ident
  len: 7
